--- a/index.html
+++ b/index.html
@@ -36,10 +36,10 @@
           <p class="hero-label">Official staking for CatMonad</p>
           <h1 class="hero-title">
             Stake your NFTs.<br />
-            Earn <span>$CATS</span> rewards.
+            Earn <span>$MON</span> rewards.
           </h1>
           <p class="hero-subtitle">
-            Connect your wallet, deposit your CatMonad NFTs, and start earning $CATS with no fuss.
+            Connect your wallet, deposit your CatMonad NFTs, and start earning $MON with no fuss.
           </p>
           <div class="hero-actions">
             <button class="btn-primary">Connect Wallet</button>
@@ -64,12 +64,12 @@
             <div class="panel-item">
               <div class="panel-item-label">NFT contract</div>
               <div class="panel-item-value panel-address">
-                0x0000...catmonad0000
+                0x6919F8b7E312D5d7c374e679de8C728E474E1557
               </div>
             </div>
             <div class="panel-item">
               <div class="panel-item-label">Rewards</div>
-              <div class="panel-item-value">8,200 $CATS</div>
+              <div class="panel-item-value">8,200 $MON</div>
             </div>
             <div class="panel-item">
               <div class="panel-item-label">Network</div>
@@ -81,7 +81,7 @@
 
           <div class="panel-footer">
             <div class="panel-footer-text">
-              Claim your accumulated <span>$CATS</span> at any time.
+              Claim your accumulated <span>$MON</span> at any time.
             </div>
             <button class="btn-primary btn-sm">Claim rewards</button>
           </div>
@@ -99,8 +99,8 @@
           <article class="stake-card">
             <header class="stake-card-header">
               <div>
-                <p class="stake-card-eyebrow">Earn $CATS</p>
-                <h3 class="stake-card-title">Stake 1 CatMonad NFT</h3>
+                <p class="stake-card-eyebrow">Earn $MON</p>
+                <h3 class="stake-card-title">Stake 5 CatMonad NFT</h3>
               </div>
               <span class="badge">Wallet</span>
             </header>
@@ -112,7 +112,7 @@
             <dl class="stake-card-stats">
               <div class="stat-row">
                 <dt>Payout</dt>
-                <dd>6,000 $CATS</dd>
+                <dd>6,000 $MON</dd>
               </div>
               <div class="stat-row">
                 <dt>Closes</dt>
@@ -120,7 +120,7 @@
               </div>
               <div class="stat-row">
                 <dt>Staking terms</dt>
-                <dd>Stake 1 CatMonad NFT</dd>
+                <dd>Stake 5 CatMonad NFT</dd>
               </div>
             </dl>
 
@@ -139,8 +139,8 @@
           <article class="stake-card">
             <header class="stake-card-header">
               <div>
-                <p class="stake-card-eyebrow">Earn $CATS</p>
-                <h3 class="stake-card-title">Stake 10 CatMonad NFTs</h3>
+                <p class="stake-card-eyebrow">Earn $MON</p>
+                <h3 class="stake-card-title">Stake 15 CatMonad NFTs</h3>
               </div>
               <span class="badge badge-filled">Staked</span>
             </header>
@@ -152,7 +152,47 @@
             <dl class="stake-card-stats">
               <div class="stat-row">
                 <dt>Payout</dt>
-                <dd>60,000 $CATS</dd>
+                <dd>60,000 $MON</dd>
+              </div>
+              <div class="stat-row">
+                <dt>Closes</dt>
+                <dd>12/12/2025</dd>
+              </div>
+              <div class="stat-row">
+                <dt>Staking terms</dt>
+                <dd>Stake 15 CatMonad NFTs</dd>
+              </div>
+            </dl>
+
+            <div class="stake-card-actions">
+              <button class="btn-primary btn-full">Stake</button>
+              <button class="btn-ghost">Unstake</button>
+            </div>
+
+            <footer class="stake-card-footer">
+              <button class="link-small">View NFT policy</button>
+              <button class="link-small">Purchase</button>
+            </footer>
+          </article>
+
+          <!-- CARD 3 -->
+          <article class="stake-card">
+            <header class="stake-card-header">
+              <div>
+                <p class="stake-card-eyebrow">Earn $MON</p>
+                <h3 class="stake-card-title">Stake 10 CatMonad NFTs</h3>
+              </div>
+              <span class="badge">Wallet</span>
+            </header>
+
+            <div class="stake-card-image">
+              <img src="cat3.png" alt="CatMonad NFT 3" />
+            </div>
+
+            <dl class="stake-card-stats">
+              <div class="stat-row">
+                <dt>Payout</dt>
+                <dd>30,000 $CATS</dd>
               </div>
               <div class="stat-row">
                 <dt>Closes</dt>
@@ -174,52 +214,12 @@
               <button class="link-small">Purchase</button>
             </footer>
           </article>
-
-          <!-- CARD 3 -->
-          <article class="stake-card">
-            <header class="stake-card-header">
-              <div>
-                <p class="stake-card-eyebrow">Earn $CATS</p>
-                <h3 class="stake-card-title">Stake 5 CatMonad NFTs</h3>
-              </div>
-              <span class="badge">Wallet</span>
-            </header>
-
-            <div class="stake-card-image">
-              <img src="cat3.png" alt="CatMonad NFT 3" />
-            </div>
-
-            <dl class="stake-card-stats">
-              <div class="stat-row">
-                <dt>Payout</dt>
-                <dd>30,000 $CATS</dd>
-              </div>
-              <div class="stat-row">
-                <dt>Closes</dt>
-                <dd>12/12/2025</dd>
-              </div>
-              <div class="stat-row">
-                <dt>Staking terms</dt>
-                <dd>Stake 5 CatMonad NFTs</dd>
-              </div>
-            </dl>
-
-            <div class="stake-card-actions">
-              <button class="btn-primary btn-full">Stake</button>
-              <button class="btn-ghost">Unstake</button>
-            </div>
-
-            <footer class="stake-card-footer">
-              <button class="link-small">View NFT policy</button>
-              <button class="link-small">Purchase</button>
-            </footer>
-          </article>
         </div>
       </section>
 
       <footer class="footer">
         <p class="footer-text">
-          Stake, earn $CATS, and grow with the CatMonad ecosystem.
+          Stake, earn $MON, and grow with the CatMonad ecosystem.
         </p>
         <div class="footer-links">
           <a href="#" class="footer-link">Docs</a>
