--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
             <dl class="stake-card-stats">
               <div class="stat-row">
                 <dt>Payout</dt>
-                <dd>30,000 $CATS</dd>
+                <dd>30,000 $MON</dd>
               </div>
               <div class="stat-row">
                 <dt>Closes</dt>
